# junk-tools

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/joke/: joke_args.rs  mod.rs
src/manga/: args.rs  error_type.rs  m4l.rs  mod.rs  utils.rs
src/screen_scroll/: matrix.rs  mod.rs  snow.rs
src/screen_scroll/utils/: graphics.rs  mod.rs
