[package]
name = "junk"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.2", features = ["derive"] }
termsize = "0.1.6"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"
