[package]
name = "junk"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.1"
camino = "1.1.7"
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3.30"
headless_chrome = { version = "1.0.10", git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
    "fetch",
] }
indicatif = "0.17.8"
rand = "0.8.5"
regex = "1.10.5"
reqwest = "0.12.5"
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.2", features = ["derive"] }
termsize = "0.1.6"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"
zip-extensions = "0.8.0"
